Fiox the md screen trigger align issue

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -108,7 +108,7 @@ i.trigger {
       display: none;
     }
     i.trigger {
-      padding: 22px 12px;
+      padding: 0px 12px;
     }
     .logo {
       padding-left: 12px;
